kubernetes/test/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uvarc-unified-service-test
  name: uvarc-unified-service-deployment-test
  namespace: uvarc-unified-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uvarc-unified-service-test
  template:
    metadata:
      labels:
        app: uvarc-unified-service-test
    spec:
      volumes:
        - name: uvarc-unified-service-ceph-data-test
          persistentVolumeClaim:
            claimName: uvarc-unified-service-ceph-pvc-data-test
      containers:
        - image: "ghcr.io/uvarc/uvarc-unified-service:develop"
          #- image: "quay.io/accord/accord-service:develop"
          name: uvarc-unified-service-test
          imagePullPolicy: "Always"
          command:
            - /usr/bin/supervisord

          volumeMounts:
            - name: uvarc-unified-service-ceph-data-test
              mountPath: /opt/local/non_root_user/uvarc_unified_service/data/

          resources:
            requests:
              memory: "1524Mi"
              cpu: "1000m"
            limits:
              memory: "2024Mi"
              cpu: "1500m"
          envFrom:
            - configMapRef:
                name: uvarc-unified-service-configmap-test
          env:
            - name: JIRA_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: JIRA_CLIENT_ID

            - name: JIRA_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: JIRA_CLIENT_SECRET

            - name: WORKDAY_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: WORKDAY_CLIENT_ID

            - name: WORKDAY_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: WORKDAY_CLIENT_SECRET

            - name: SMTP_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: SMTP_CLIENT_ID

            - name: SMTP_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: SMTP_CLIENT_SECRET

            - name: AWS_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: AWS_CLIENT_ID

            - name: AWS_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: AWS_CLIENT_SECRET

            - name: MONGO_USER
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: MONGO_USER

            - name: MONGO_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: MONGO_PASSWORD

            - name: LDAP_PUBLIC_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: LDAP_PUBLIC_CLIENT_ID

            - name: LDAP_PUBLIC_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: LDAP_PUBLIC_CLIENT_SECRET

            - name: LDAP_PRIVATE_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: LDAP_PRIVATE_CLIENT_ID

            - name: LDAP_PRIVATE_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: LDAP_PRIVATE_CLIENT_SECRET

            - name: HPC_API_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: HPC_API_CLIENT_ID

            - name: HPC_API_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: HPC_API_CLIENT_SECRET

            - name: QUALTRICS_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: QUALTRICS_CLIENT_ID

            - name: QUALTRICS_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: QUALTRICS_CLIENT_SECRET

            - name: LIBCAL_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: LIBCAL_CLIENT_ID

            - name: LIBCAL_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: LIBCAL_CLIENT_SECRET

            - name: HSL_API_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: HSL_API_CLIENT_ID

            - name: HSL_API_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: uvarc-unified-service-secret-test
                  key: HSL_API_CLIENT_SECRET
