kubernetes/test/templates/ingress.yaml
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    #    nginx.org/websocket-services: "uvarc-unified-service"
#    acme.cert-manager.io/http01-edit-in-place: "true"
#    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
#    nginx.org/proxy-connect-timeout: "600s"
#    nginx.org/proxy-read-timeout: "600s"
#    nginx.org/proxy-send-timeout: "600s"
#  name: uvarc-unified-service-ingress-test
#  namespace: uvarc-unified-services
#spec:
#  rules:
#    - host: uvarc-unified-service-test.pods.uvarc.io
#      http:
#        paths:
#          - pathType: Prefix
#            path: "/"
#            backend:
#              service:
#                name: uvarc-unified-service-test
#                port:
#                  number: 80
#  tls:
#    - hosts:
#        - uvarc-unified-service-test.pods.uvarc.io
#      secretName: uvarc-unified-service-nginx-tls-ingress-secret-test
